--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
@@ -14,20 +15,36 @@
         body {
             display:flex;
             flex-direction:column;
-            font-family:Arial, sans-serif;
-            background:#0a1628;
+            font-family:'Poppins', sans-serif;
+            background:linear-gradient(135deg, #0a1628 0%, #1a2a4a 100%);
             color:white;
         }
 
         /* Header */
         #header {
-            text-align:center;
-            padding:20px;
-            background:#0d2137;
-            font-size:2.5em;
-            font-weight:bold;
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            padding:20px 40px;
+            background:rgba(13, 33, 55, 0.8);
+            backdrop-filter:blur(10px);
+            border-bottom:1px solid rgba(255,255,255,0.1);
+        }
+
+        #header .title {
+            font-size:2em;
+            font-weight:600;
             color:#f39c12;
-            letter-spacing:2px;
+            letter-spacing:3px;
+            text-shadow:0 2px 10px rgba(243, 156, 18, 0.3);
+        }
+
+        #header .clock {
+            font-size:2.5em;
+            font-weight:300;
+            color:#4ecdc4;
+            font-variant-numeric:tabular-nums;
+            text-shadow:0 2px 10px rgba(78, 205, 196, 0.3);
         }
 
         /* Main container */
@@ -35,69 +52,83 @@
             flex:1;
             display:flex;
             overflow:hidden;
+            padding:20px;
+            gap:20px;
         }
 
         /* Left sidebar - Prayer times */
         #sidebar {
-            width:350px;
-            min-width:350px;
-            background:#0d2137;
+            width:380px;
+            min-width:380px;
+            background:rgba(13, 33, 55, 0.6);
+            backdrop-filter:blur(20px);
+            border-radius:20px;
             display:flex;
             flex-direction:column;
             padding:30px;
             justify-content:center;
+            border:1px solid rgba(255,255,255,0.1);
+            box-shadow:0 8px 32px rgba(0,0,0,0.3);
         }
 
         .location {
             font-size:2.2em;
-            font-weight:bold;
+            font-weight:600;
             color:#f39c12;
             text-align:center;
-            margin-bottom:15px;
+            margin-bottom:10px;
         }
 
         .date {
             text-align:center;
-            margin-bottom:30px;
-            font-size:1em;
-            opacity:0.9;
+            margin-bottom:25px;
+            font-size:1.1em;
+            font-weight:300;
         }
 
         .date-islamic {
             color:#4ecdc4;
-            font-weight:bold;
-            margin-bottom:8px;
+            font-weight:500;
+            margin-bottom:5px;
         }
 
         .prayer-times {
             display:flex;
             flex-direction:column;
-            gap:20px;
+            gap:12px;
         }
 
         .prayer {
             display:flex;
             justify-content:space-between;
             align-items:center;
-            padding:20px 25px;
+            padding:18px 22px;
             background:rgba(255,255,255,0.05);
-            border-radius:10px;
-            transition:all 0.3s ease;
+            border-radius:12px;
+            transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border:1px solid transparent;
+        }
+
+        .prayer:hover {
+            background:rgba(255,255,255,0.08);
+            transform:translateX(5px);
         }
 
         .prayer.active {
-            background:rgba(78,205,196,0.3);
-            box-shadow:0 0 15px rgba(78,205,196,0.4);
+            background:rgba(78,205,196,0.2);
+            border:1px solid rgba(78,205,196,0.4);
+            box-shadow:0 0 20px rgba(78,205,196,0.2);
         }
 
         .prayer-name {
-            font-size:1.3em;
+            font-size:1.4em;
+            font-weight:400;
             opacity:0.9;
         }
 
         .prayer-time {
-            font-size:1.6em;
-            font-weight:bold;
+            font-size:1.9em;
+            font-weight:600;
         }
 
         /* Main content area */
@@ -107,6 +138,7 @@
             flex-direction:column;
             overflow:hidden;
             min-width:0;
+            gap:20px;
         }
 
         /* Message display area */
@@ -115,22 +147,25 @@
             display:flex;
             justify-content:center;
             align-items:center;
-            padding:60px 80px;
+            padding:40px 60px;
             text-align:center;
-            overflow:hidden;
+            background:rgba(13, 33, 55, 0.4);
+            backdrop-filter:blur(10px);
+            border-radius:20px;
+            border:1px solid rgba(255,255,255,0.1);
+            box-shadow:0 8px 32px rgba(0,0,0,0.2);
         }
 
         #message {
-            font-size:4vw;
-            font-weight:bold;
-            line-height:1.5;
+            font-size:3.5vw;
+            font-weight:500;
+            line-height:1.6;
             opacity:1;
-            transition:opacity 0.5s ease, font-size 0.3s ease;
+            transition:opacity 0.5s ease;
             max-width:100%;
             max-height:100%;
             word-wrap:break-word;
             white-space:pre-line;
-            overflow:hidden;
         }
 
         #message.fade-out {
@@ -139,12 +174,14 @@
 
         /* Bottom ticker for Obavještenja */
         #bottom {
-            height:80px;
-            min-height:80px;
-            background:#1d7d1d;
+            height:70px;
+            min-height:70px;
+            background:linear-gradient(90deg, #1d7d1d 0%, #2d9d2d 100%);
             display:none;
             align-items:center;
             overflow:hidden;
+            border-radius:15px;
+            box-shadow:0 4px 20px rgba(29, 125, 29, 0.3);
         }
 
         #bottom.has-announcements {
@@ -158,15 +195,15 @@
         }
 
         .ticker-item {
-            padding:0 20px;
-            font-size:2.2em;
-            font-weight:bold;
+            padding:0 25px;
+            font-size:1.8em;
+            font-weight:500;
         }
 
         .ticker-item::after {
-            content:" ★ ";
-            margin:0 20px;
-            opacity:0.7;
+            content:" ✦ ";
+            margin:0 25px;
+            opacity:0.6;
         }
 
         @keyframes scroll-left {
@@ -174,7 +211,7 @@
             100% { transform:translateX(-50%); }
         }
 
-        /* Test Panel - COMMENTED OUT
+        /* Test Panel */
         #test-panel {
             position:fixed;
             top:10px;
@@ -184,49 +221,22 @@
             border-radius:10px;
             z-index:2000;
             font-size:12px;
+            max-width:200px;
         }
-
-        #test-panel h3 {
-            margin-bottom:10px;
-            color:#f39c12;
-        }
-
+        #test-panel h3 { margin-bottom:10px; color:#f39c12; }
+        #test-panel div { margin:5px 0; }
         #test-panel button {
-            display:block;
-            width:100%;
-            margin:5px 0;
-            padding:8px 12px;
+            margin:2px;
+            padding:5px 8px;
+            cursor:pointer;
             border:none;
             border-radius:5px;
-            cursor:pointer;
-            font-size:12px;
+            font-size:11px;
         }
-
-        #test-panel button.prayer-btn {
-            background:#2ecc71;
-            color:white;
-        }
-
-        #test-panel button.mode-btn {
-            background:#e74c3c;
-            color:white;
-        }
-
-        #test-panel button.exit-btn {
-            background:#3498db;
-            color:white;
-        }
-
-        #test-panel button:hover {
-            opacity:0.8;
-        }
-
-        #test-panel .section {
-            margin-top:10px;
-            padding-top:10px;
-            border-top:1px solid #444;
-        }
-        */
+        #test-panel .prayer-btn { background:#4ecdc4; }
+        #test-panel .mode-btn { background:#f39c12; }
+        #test-panel .exit-btn { background:#e74c3c; color:white; }
+        #test-panel .section { margin-top:10px; color:#aaa; }
 
         /* Prayer Mode - Fullscreen */
         #prayer-mode {
@@ -236,12 +246,13 @@
             left:0;
             width:100%;
             height:100%;
-            background:#0a1628;
+            background:linear-gradient(135deg, #0a1628 0%, #1a2a4a 100%);
             z-index:1000;
             flex-direction:column;
             justify-content:center;
             align-items:center;
             text-align:center;
+            padding:40px;
         }
 
         #prayer-mode.active {
@@ -249,65 +260,79 @@
         }
 
         #prayer-mode .prayer-mode-header {
-            font-size:2.5em;
-            font-weight:bold;
+            font-size:2.2em;
+            font-weight:600;
             color:#f39c12;
-            letter-spacing:2px;
+            letter-spacing:3px;
+            margin-bottom:20px;
+            text-shadow:0 2px 10px rgba(243, 156, 18, 0.3);
+        }
+
+        #prayer-mode .prayer-mode-clock {
+            font-size:3em;
+            font-weight:300;
+            color:#4ecdc4;
             margin-bottom:30px;
+            font-variant-numeric:tabular-nums;
         }
 
         #prayer-mode .prayer-mode-title {
-            font-size:4vw;
+            font-size:2.5vw;
             color:#f39c12;
             margin-bottom:10px;
+            font-weight:500;
         }
 
         #prayer-mode .prayer-mode-date {
             text-align:center;
             margin-bottom:40px;
-            font-size:1.8vw;
+            font-size:1.5vw;
+            font-weight:300;
         }
 
         #prayer-mode .prayer-mode-date .islamic {
             color:#4ecdc4;
-            font-weight:bold;
+            font-weight:500;
             margin-bottom:5px;
         }
 
         #prayer-mode .prayer-mode-date .gregorian {
-            opacity:0.9;
+            opacity:0.8;
         }
 
         #prayer-mode .prayer-mode-times {
             display:flex;
-            gap:30px;
+            gap:25px;
             flex-wrap:wrap;
             justify-content:center;
         }
 
         #prayer-mode .prayer-mode-item {
             text-align:center;
-            padding:30px 40px;
+            padding:25px 35px;
             background:rgba(255,255,255,0.05);
-            border-radius:15px;
-            transition:all 0.3s ease;
+            border-radius:16px;
+            transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border:1px solid rgba(255,255,255,0.1);
         }
 
         #prayer-mode .prayer-mode-item.active {
-            background:rgba(78,205,196,0.3);
-            box-shadow:0 0 30px rgba(78,205,196,0.5);
-            transform:scale(1.1);
+            background:rgba(78,205,196,0.2);
+            border:1px solid rgba(78,205,196,0.5);
+            box-shadow:0 0 40px rgba(78,205,196,0.3);
+            transform:scale(1.08);
         }
 
         #prayer-mode .prayer-mode-item .name {
-            font-size:2.5vw;
+            font-size:2vw;
+            font-weight:400;
             opacity:0.8;
-            margin-bottom:10px;
+            margin-bottom:8px;
         }
 
         #prayer-mode .prayer-mode-item .time {
-            font-size:4vw;
-            font-weight:bold;
+            font-size:3.5vw;
+            font-weight:600;
         }
 
         #prayer-mode .prayer-mode-item.active .name {
@@ -316,9 +341,10 @@
         }
 
         #prayer-mode .prayer-status {
-            font-size:2.5vw;
-            margin-top:50px;
-            opacity:0.7;
+            font-size:2vw;
+            margin-top:40px;
+            opacity:0.6;
+            font-weight:300;
         }
 
         /* Hide normal content during prayer mode */
@@ -330,10 +356,9 @@
 
 <body>
 
-<!-- Test Panel - COMMENTED OUT
+<!-- Test Panel - HIDDEN
 <div id="test-panel">
     <h3>Test Panel</h3>
-
     <div>Set Active Prayer:</div>
     <button class="prayer-btn" onclick="testSetActivePrayer(0)">Zora</button>
     <button class="prayer-btn" onclick="testSetActivePrayer(1)">Izlazak</button>
@@ -341,24 +366,25 @@
     <button class="prayer-btn" onclick="testSetActivePrayer(3)">Ikindija</button>
     <button class="prayer-btn" onclick="testSetActivePrayer(4)">Akšam</button>
     <button class="prayer-btn" onclick="testSetActivePrayer(5)">Jacija</button>
-
     <div class="section">Prayer Mode:</div>
     <button class="mode-btn" onclick="testEnterPrayerMode(0)">30s before Zora</button>
     <button class="mode-btn" onclick="testEnterPrayerMode(2)">30s before Podne</button>
     <button class="mode-btn" onclick="testEnterPrayerMode(4)">30s before Akšam</button>
-
     <div class="section">Exit:</div>
     <button class="exit-btn" onclick="exitPrayerMode()">Exit Prayer Mode</button>
-
     <div class="section">Messages:</div>
     <button class="exit-btn" onclick="rotateMessage()">Next Message</button>
     <button class="exit-btn" onclick="fetchMessages()">Force Refresh CSV</button>
+    <div class="section">Announcements:</div>
+    <button class="mode-btn" onclick="testAddAnnouncement()">Add Test</button>
+    <button class="exit-btn" onclick="testClearAnnouncements()">Clear</button>
 </div>
 -->
 
 <!-- Prayer Mode Fullscreen -->
 <div id="prayer-mode">
     <div class="prayer-mode-header">ARSLANAGINA VIKALJSKA DŽAMIJA</div>
+    <div class="prayer-mode-clock" id="prayer-mode-clock"></div>
     <div class="prayer-mode-title" id="prayer-mode-title">Tuzla</div>
     <div class="prayer-mode-date">
         <div class="islamic" id="prayer-mode-islamic"></div>
@@ -369,7 +395,10 @@
 </div>
 
 <!-- Header -->
-<div id="header">ARSLANAGINA VIKALJSKA DŽAMIJA</div>
+<div id="header">
+    <div class="title">ARSLANAGINA VIKALJSKA DŽAMIJA</div>
+    <div class="clock" id="clock"></div>
+</div>
 
 <!-- Main container -->
 <div id="container">
@@ -395,6 +424,30 @@
 </div>
 
 <script>
+    // ============================================
+    // CLOCK
+    // ============================================
+    function updateClock() {
+        const now = new Date();
+        const time = now.toLocaleTimeString('hr-HR', {
+            hour: '2-digit',
+            minute: '2-digit',
+            second: '2-digit',
+            hour12: false
+        });
+        document.getElementById('clock').textContent = time;
+
+        // Also update prayer mode clock if visible
+        const prayerClock = document.getElementById('prayer-mode-clock');
+        if (prayerClock) {
+            prayerClock.textContent = time;
+        }
+    }
+
+    // Update clock every second
+    setInterval(updateClock, 1000);
+    updateClock();
+
     // ============================================
     // CONFIGURATION
     // ============================================
@@ -440,8 +493,6 @@
         vakat: ['5:30', '7:00', '11:45', '14:30', '16:45', '18:15']
     };
 
-    // Fallback messages
-    const FALLBACK_MESSAGES = ['Dobrodošli u našu džamiju'];
 
     // State
     let vaktijaData = null;
@@ -610,15 +661,15 @@
         // Adjust font size based on content
         let fontSize;
         if (length > 500 || lines > 10) {
-            fontSize = '1.8vw';
+            fontSize = '1.6vw';
         } else if (length > 300 || lines > 6) {
-            fontSize = '2.2vw';
+            fontSize = '2vw';
         } else if (length > 150 || lines > 4) {
-            fontSize = '2.8vw';
+            fontSize = '2.5vw';
         } else if (length > 80 || lines > 2) {
-            fontSize = '3.5vw';
+            fontSize = '3vw';
         } else {
-            fontSize = '4.5vw';
+            fontSize = '3.5vw';
         }
 
         el.style.fontSize = fontSize;
@@ -636,7 +687,10 @@
     }
 
     function rotateMessage() {
-        if (messages.length === 0) return;
+        if (messages.length === 0) {
+            document.getElementById('message').textContent = '';
+            return;
+        }
 
         showMessage(messages[currentMessageIndex]);
         currentMessageIndex = (currentMessageIndex + 1) % messages.length;
@@ -768,7 +822,7 @@
             const csvData = parseCSV(csv);
             const todayMessages = getMessagesForToday(csvData);
 
-            messages = todayMessages.length > 0 ? todayMessages : FALLBACK_MESSAGES;
+            messages = todayMessages;
 
             // Get announcements from column H
             announcements = getAnnouncements(csvData);
@@ -785,7 +839,7 @@
             }
         } catch (error) {
             console.error('Failed to fetch messages:', error);
-            messages = FALLBACK_MESSAGES;
+            messages = [];
         }
     }
 
@@ -837,10 +891,9 @@
     setInterval(checkForUpdates, CODE_CHECK_MS);
     checkForUpdates();
 
-    /* TEST FUNCTIONS - COMMENTED OUT
-    function testSetActivePrayer(index) {
+    // TEST FUNCTIONS (global scope for onclick handlers)
+    window.testSetActivePrayer = function(index) {
         if (!vaktijaData) return;
-
         const container = document.getElementById('prayer-times');
         container.innerHTML = vaktijaData.vakat.map((time, i) => `
             <div class="prayer ${i === index ? 'active' : ''}">
@@ -848,14 +901,27 @@
                 <div class="prayer-time">${time}</div>
             </div>
         `).join('');
-    }
+    };
 
-    function testEnterPrayerMode(index) {
+    window.testEnterPrayerMode = function(index) {
         if (!vaktijaData) return;
         prayerModeActive = false;
         enterPrayerMode(index);
-    }
-    */
+    };
+
+    window.exitPrayerMode = exitPrayerMode;
+    window.rotateMessage = rotateMessage;
+    window.fetchMessages = fetchMessages;
+
+    window.testAddAnnouncement = function() {
+        announcements.push('Test obavještenje ' + (announcements.length + 1));
+        updateTicker();
+    };
+
+    window.testClearAnnouncements = function() {
+        announcements = [];
+        updateTicker();
+    };
 </script>
 
 </body>
