--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
 
 <body>
 
+<!-- Test Panel - HIDDEN
 <div id="test-panel">
     <h3>Test Panel</h3>
     <div>Set Active Prayer:</div>
@@ -378,6 +379,7 @@
     <button class="mode-btn" onclick="testAddAnnouncement()">Add Test</button>
     <button class="exit-btn" onclick="testClearAnnouncements()">Clear</button>
 </div>
+-->
 
 <!-- Prayer Mode Fullscreen -->
 <div id="prayer-mode">
